--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -5,7 +5,7 @@
             <input type="checkbox" title="checkbox" [(ngModel)]="item.checked">
             <input type="text" title="task" [(ngModel)]="item.task">
 
-            <button>
+            <button (click)="deleteItemTaskList(i)">
                 <img src="../../../../../assets/icons/icon-trash.svg" alt="">
             </button>
         </li>
