--- a/src/app/modules/home/components/todo-list/todo-list.component.scss
+++ b/src/app/modules/home/components/todo-list/todo-list.component.scss
@@ -7,9 +7,9 @@ section {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
     margin-top: 20px;
 
-    &.loagind {
-        background-image: url(../../../../../assets/img/bg-task.png);
-        background-repeat: none;
+    &.loading{
+        background-image: url("../../../../../assets/img/bg-task.png");
+        background-repeat: no-repeat;
         background-position: center 30px;
     }
 
