--- a/src/app/modules/home/components/todo-input-add-items/todo-input-add-items.component.html
+++ b/src/app/modules/home/components/todo-input-add-items/todo-input-add-items.component.html
@@ -1,1 +1,1 @@
-<input type="text" placeholder="Digite a nova task...">
+<input type="text" placeholder="Digite a nova task..." [(ngModel)]="addItemTaskList" (keyup.enter)="submitItemTaskList()">
